--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Mazaharul Abedin
 author: Mazaharul Abedin
 email: mazaharul.rs@presiuniv.ac.in
-description: >-
-  Academic portfolio of Mazaharul Abedin. PhD Research Scholar at Presidency University, Kolkata. 
-  Exploring Observational Cosmology, Dark Energy, and Machine Learning applications in Physics.
+# description: >-
+#   Academic portfolio of Mazaharul Abedin. PhD Research Scholar at Presidency University, Kolkata. 
+#   Exploring Observational Cosmology, Dark Energy, and Machine Learning applications in Physics.
 
 # --- Technical Settings ---
 baseurl: "" 
